# jupyterlab-browser-ai

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml  deploy.yml  prep-release.yml  publish-release.yml
demo/: README.md  pyproject.toml
schema/: notebook-proofreader.json  plugin.json
src/: chrome-ai-alt-text.ts  chrome-ai-audio-transcript.ts  chrome-ai-file-summarizer.ts  chrome-ai-proofreader.ts  chrome-ai-shared.ts  index.ts  polyfill.ts  provider-registry.ts  provider.ts  transformersjs-worker.ts  webllm-worker.ts
style/: base.css
