[project]
name = "jupyterlab-browser-ai-demo"
version = "0.1.0"
description = "JupyterLab Browser AI demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlite-ai>=0.12.0",
    "jupyterlab-browser-ai",
    "jupyterlite-core>=0.7.0",
    "jupyterlite-pyodide-kernel>=0.7.0",
]

[tool.uv.sources]
jupyterlab-browser-ai = { path = "../" }
